--- a/build.xml
+++ b/build.xml
@@ -274,10 +274,10 @@
 	</target>
 
 	<target name="junit" depends="junit-package" unless="${test.skip}"
-			description="Runs all unit tests. Options:&#10;
+			description="Runs all unit tests. Options to specify with 'ant -D':&#10;
 		        - Set test.coverage=true to analyze test coverage. View by e.g.: firefox test-coverage/html/index.html&#10;
-		        - Set test.skip=true to skip&#10;
-		        - Set test.class=&lt;test class&gt; (e.g. test.class=plugins.WebOfTrust.WoTTest) to run a single test)&#10;
+		        - Set test.skip=true to skip. The tests will still be compiled so you can run them from e.g. Eclipse!&#10;
+		        - Set test.class=&lt;test class&gt; (e.g. test.class=plugins.WebOfTrust.WoTTest) to run a single test&#10;
 		        - Set test.benchmark=true to run benchmarks.&#10;
 		        - Set test.unreliable=true to run tests which may fail on slow machines.">
 		
