--- a/build.xml
+++ b/build.xml
@@ -269,6 +269,11 @@
 		<taskdef classpathref="cobertura.path" resource="tasks.properties"/>
 		
 		<cobertura-instrument datafile="${build-test-coverage}/cobertura.ser">
+			<auxClasspath>
+				<path refid="submodules.path"/>
+				<path refid="lib.path"/>
+			</auxClasspath>
+			
 			<fileset dir="${build-test}/test">
 				<include name="**/*.class" />
 				<!-- kaptcha is a third-party library -->
