Cobertura: Fix ClassNotFoundException during instrumentation
auxClasspath is specifically intended for this issue:
https://github.com/cobertura/cobertura/wiki/Ant-Task-Reference#adding-auxclasspath

--- a/build.xml
+++ b/build.xml
@@ -247,6 +247,11 @@
 		<taskdef classpathref="cobertura.path" resource="tasks.properties"/>
 		
 		<cobertura-instrument datafile="${build-test-coverage}/cobertura.ser">
+			<auxClasspath>
+				<path refid="submodules.path"/>
+				<path refid="lib.path"/>
+			</auxClasspath>
+			
 			<fileset dir="${build-test}/classes">
 				<include name="**/*.class" />
 				<!-- kaptcha is a third-party library -->
