--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ defaultTasks 'jar', 'test'
 sourceSets.main.java.srcDirs = ['src/']
 sourceSets.test.java.srcDirs = ['test/']
 sourceCompatibility = targetCompatibility = 7
+compileJava.options.encoding = "UTF-8"
+compileTestJava.options.encoding = "UTF-8"
 javadoc.enabled = false
 
 configurations { junit } // Needed when we manually specify the tests' classpath
@@ -41,6 +43,7 @@ task compileVersionFile(type: JavaCompile, dependsOn: ['compileJava', 'prepareVe
 	classpath = sourceSets.main.compileClasspath
 	source = prepareVersionFile.destinationDir
 	destinationDir = file("${buildDir}/custom/versionFileClass/")
+	options.encoding = compileJava.options.encoding
 }
 
 ["jar", "testJar"].each { jarType ->
