Travis CI: Documentation

--- a/.travis.yml
+++ b/.travis.yml
@@ -106,10 +106,10 @@ matrix:
   include:
     # We will run most of our tests against fred branch next (= the development branch) to fulfill
     # our purpose of integration testing.
-    # First we will hereby also test on branch master to ensure WoT works against the latest stable
-    # release as well because plugins can be updated without a new Freenet release.
+    # But first we will hereby also test on branch master to ensure WoT works against the latest
+    # stable release as well because plugins can be updated without a new Freenet release.
     # We only test against master on a single Java version to keep the matrix small, all the others
-    # will be tested against next by "jdk:" below.
+    # will be tested against next by the second "jdk:" below.
     - env: FRED_BRANCH=master
       # Travis doesn't support this yet so we will hardcode it:
       ## jdk: openjdk$FREENET_MINIMUM_JAVA_VERSION
