--- a/.travis.yml
+++ b/.travis.yml
@@ -102,6 +102,9 @@ script:
   ## - tools/compare-gradle-jars-with-ant-jars
   ## - tools/compare-gradle-tests-with-ant-tests
 
+
+env: FRED_BRANCH=next
+    
 matrix:
   include:
     # We will run most of our tests against fred branch next (= the development branch) to fulfill
@@ -114,21 +117,20 @@ matrix:
       # Travis doesn't support this yet so we will hardcode it:
       ## jdk: openjdk$FREENET_MINIMUM_JAVA_VERSION
       jdk: openjdk7
-    
-    - env: FRED_BRANCH=next
-      jdk:
-        - openjdk7
-        - openjdk8
-        - openjdk9
-        - openjdk10
-        - openjdk11
-        - openjdk12
-        # oraclejdk7: Not supported anymore: https://github.com/travis-ci/travis-ci/issues/7884#issuecomment-308451879
-        - oraclejdk8
-        # oraclejdk9: No more updates by Oracle: https://www.oracle.com/technetwork/java/java-se-support-roadmap.html
-        # oraclejdk10: Not supported anymore: https://changelog.travis-ci.com/stop-a-job-early-if-a-deprecated-jdk-is-configured-76612
-        - oraclejdk11
-        # oraclejdk12: Not available on Travis CI as of 2019-05-04, was released 2019-03.
+
+jdk:
+  - openjdk7
+  - openjdk8
+  - openjdk9
+  - openjdk10
+  - openjdk11
+  - openjdk12
+  # oraclejdk7: Not supported anymore: https://github.com/travis-ci/travis-ci/issues/7884#issuecomment-308451879
+  - oraclejdk8
+  # oraclejdk9: No more updates by Oracle: https://www.oracle.com/technetwork/java/java-se-support-roadmap.html
+  # oraclejdk10: Not supported anymore: https://changelog.travis-ci.com/stop-a-job-early-if-a-deprecated-jdk-is-configured-76612
+  - oraclejdk11
+  # oraclejdk12: Not available on Travis CI as of 2019-05-04, was released 2019-03.
 
 deploy:
   provider: script
