--- a/.travis.yml
+++ b/.travis.yml
@@ -85,25 +85,22 @@ script:
   # Don't allow Travis to override the low memory limit which our builder sets with a higher one.
   - unset _JAVA_OPTIONS
   - echo 'fred version:' ; java -classpath '../fred/build/output/freenet.jar' 'freenet.node.Version'
-  # Use Gradle instead of Ant as it supports using multiple CPU cores on the unit tests.
   # Use the same Gradle as fred to re-use the fixes we applied to it above and because Travis'
   # Gradle version is too old for Java >= 9.
   - ln -sf "$TRAVIS_BUILD_DIR/../fred/gradlew"
-  # ... but still use Ant on one Java version to ensure it keeps working.
-  # And don't use it on the minimum Java version as there we will run the deployment - which takes
-  # long enough already, and Ant is slower than Gradle, so we would risk exhausting the time limit.
   - |
-    if [ "$TRAVIS_JDK_VERSION" = "openjdk$((FREENET_MINIMUM_JAVA_VERSION + 1))" ] ; then
+    if [ "$BUILDER" = "ant" ] ; then
         ant clean && ant
-    else
+    elif [ "$BUILDER" = "gradle" ] ; then
         ./gradlew clean test jar
-    fi
+    else false ; fi
   # To test the Ant and Gradle builders against each other uncomment the following.
   ## - tools/compare-gradle-jars-with-ant-jars
   ## - tools/compare-gradle-tests-with-ant-tests
 
 
-env: FRED_BRANCH=next
+# Use Gradle instead of Ant as it supports using multiple CPU cores on the unit tests.
+env: FRED_BRANCH=next BUILDER=gradle
     
 matrix:
   include:
@@ -120,6 +117,11 @@ matrix:
 
     - jdk: openjdk7
     - jdk: openjdk8
+      # ... but still use Ant on one Java version to ensure it keeps working.
+      # And don't use it on the minimum Java version as there we will run the deployment - which
+      # takes long enough already, and Ant is slower than Gradle, so we would risk exhausting the
+      # time limit.
+      env: BUILDER=ant
     - jdk: openjdk9
     - jdk: openjdk10
     - jdk: openjdk11
