--- a/.travis.yml
+++ b/.travis.yml
@@ -110,7 +110,9 @@ matrix:
     # stable release as well because plugins can be updated without a new Freenet release.
     # We only test against master on a single Java version to keep the matrix small, all the others
     # will be tested against next by the second and following "jdk:" below.
-    - env: FRED_BRANCH=master BUILDER=gradle
+    # We will also deploy from this Java version and fred version because they are the minimum
+    # so the resulting JAR and fred upload will work everywhere.
+    - env: FRED_BRANCH=master BUILDER=gradle DEPLOY=1
       # Travis doesn't support this yet so we will hardcode it:
       ## jdk: openjdk$FREENET_MINIMUM_JAVA_VERSION
       jdk: openjdk7
@@ -140,4 +142,4 @@ deploy:
   script: ./.travis.upload-jar-to-freenet.sh
   on:
     all_branches: true
-    condition: $TRAVIS_JDK_VERSION = "openjdk$FREENET_MINIMUM_JAVA_VERSION"
+    condition: "$DEPLOY" = 1
