Travis CI: Try to fix Travis not running at all anymore since last commit
The kate editor highlights the old code here in a weird fashion, perhaps
Travis syntax doesn't support this for some reason.

Don't ask me way, it is supposed to be the content of a bash [[-test,
and the way it was like before is correct for that.

--- a/.travis.yml
+++ b/.travis.yml
@@ -142,4 +142,4 @@ deploy:
   script: ./.travis.upload-jar-to-freenet.sh
   on:
     all_branches: true
-    condition: "$DEPLOY" = 1
+    condition: $DEPLOY = 1
