--- a/.travis.yml
+++ b/.travis.yml
@@ -129,12 +129,14 @@ matrix:
     - jdk: openjdk10
     - jdk: openjdk11
     - jdk: openjdk12
+    - jdk: openjdk13
     # oraclejdk7: Not supported anymore: https://github.com/travis-ci/travis-ci/issues/7884#issuecomment-308451879
     - jdk: oraclejdk8
     # oraclejdk9: No more updates by Oracle: https://www.oracle.com/technetwork/java/java-se-support-roadmap.html
     # oraclejdk10: Not supported anymore: https://changelog.travis-ci.com/stop-a-job-early-if-a-deprecated-jdk-is-configured-76612
     - jdk: oraclejdk11
-    # oraclejdk12: Not available on Travis CI as of 2019-05-04, was released 2019-03.
+    - jdk: oraclejdk12
+    - jdk: oraclejdk13
 
 deploy:
   provider: script
