Travis CI: Disable testing on some old Oracle JDK versions as the most recent one works now
Keeping only the oldest and latest Oracle JDK enabled in favor of
testing on all OpenJDK versions:
Freenet users are likely to favor open source software so we should test
on that more thoroughly.

--- a/.travis.yml
+++ b/.travis.yml
@@ -134,8 +134,8 @@ matrix:
     - jdk: oraclejdk8
     # oraclejdk9: No more updates by Oracle: https://www.oracle.com/technetwork/java/java-se-support-roadmap.html
     # oraclejdk10: Not supported anymore: https://changelog.travis-ci.com/stop-a-job-early-if-a-deprecated-jdk-is-configured-76612
-    - jdk: oraclejdk11
-    - jdk: oraclejdk12
+    # oraclejdk11: Disabled to keep the build matrix small.
+    # oraclejdk12: Disabled to keep the build matrix small.
     - jdk: oraclejdk13
 
 deploy:
