Travis CI: Try if the latest Java preview release is available

--- a/.travis.yml
+++ b/.travis.yml
@@ -137,6 +137,7 @@ matrix:
     # oraclejdk11: Disabled to keep the build matrix small.
     # oraclejdk12: Disabled to keep the build matrix small.
     - jdk: oraclejdk13
+    - jdk: oraclejdk14
 
 deploy:
   provider: script
