--- a/.travis.yml
+++ b/.travis.yml
@@ -132,7 +132,7 @@ matrix:
     - jdk: openjdk13
     - jdk: openjdk14
     # oraclejdk7: Not supported anymore: https://github.com/travis-ci/travis-ci/issues/7884#issuecomment-308451879
-    - jdk: oraclejdk8
+    # oraclejdk8: Disabled to keep the build matrix small.
     # oraclejdk9: No more updates by Oracle: https://www.oracle.com/technetwork/java/java-se-support-roadmap.html
     # oraclejdk10: Not supported anymore: https://changelog.travis-ci.com/stop-a-job-early-if-a-deprecated-jdk-is-configured-76612
     # oraclejdk11: Disabled to keep the build matrix small.
