Travis CI: Show stdout/stderr of unit tests to prevent 10m build timeout
See:
https://stackoverflow.com/questions/40954017/gradle-how-to-get-output-from-test-stderr-stdout-into-console
https://stackoverflow.com/questions/21442642/how-do-i-set-test-testlogging-showstandardstreams-to-true-from-the-command-line

--- a/.travis.yml
+++ b/.travis.yml
@@ -87,7 +87,9 @@ script:
     if [ "$BUILDER" = "ant" ] ; then
         ant clean && ant
     elif [ "$BUILDER" = "gradle" ] ; then
-        ./gradlew clean test jar
+        # NOTICE: "clean" is both necessary to ensure the JAR is clean as well as for the
+        # showStandardStreams to show up to date output!
+        ./gradlew -Doverride.test.testLogging.info.showStandardStreams=true clean test jar
     else false ; fi
   # To test the Ant and Gradle builders against each other uncomment the following.
   ## - tools/compare-gradle-jars-with-ant-jars
