--- a/.travis.yml
+++ b/.travis.yml
@@ -87,7 +87,8 @@ script:
     if [ "$BUILDER" = "ant" ] ; then
         ant clean && ant
     elif [ "$BUILDER" = "gradle" ] ; then
-        ./gradlew clean test jar
+        # Show stdout/stderr to prevent 10 minute build timeout from hitting.
+        WOT__SHOW_GRADLE_TEST_OUTPUT=1 ./gradlew clean test jar
     else false ; fi
   # To test the Ant and Gradle builders against each other uncomment the following.
   ## - tools/compare-gradle-jars-with-ant-jars
