README: Document how to enable test stdout/stderr w/ Gradle

--- a/build.gradle
+++ b/build.gradle
@@ -100,8 +100,9 @@ test {
 		
 		// Allow enabling stdout/stderr so developers can obtain random seeds to reproduce failed
 		// test runs.
-		// TODO: Code quality: Have developers and .travis.yml do this on the command line without
-		// requiring this code here once Travis CI contains a sufficiently recent Gradle for
+		// TODO: Code quality: Have developers (by updating the README.md) and .travis.yml do this
+		// on the command line without requiring this code here once Travis CI contains a
+		// sufficiently recent Gradle for
 		// "-Doverride.test.testLogging.info.showStandardStreams=true" to work.
 		// Notice that the ".info" may be a typo from the person who posted this to
 		// stackoverflow.com as the working code below does not contain ".info", so you may have to
