--- a/.travis.yml
+++ b/.travis.yml
@@ -70,3 +70,4 @@ deploy:
   script: ./.travis.upload-jar-to-freenet.sh
   on:
     all_branches: true
+    condition: "$TRAVIS_JDK_VERSION" = "openjdk8"
