Travis CI: Fix disabling on this branch to also apply to the numbered PR subbranches of it
I ship the work to ArneBab in branches suffixed with a number.
Unit tests have not been fixed on this branch yet so it would always fail
there which produces annoying emails.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 # FIXME: Re-enable once the branch is finished
 branches:
   except:
-    - issue-0003816-IdentityFetcher-rewrite
+    - /^issue-0003816-IdentityFetcher-rewrite(.*)$/
 
 language: java
 
