--- a/.travis.yml
+++ b/.travis.yml
@@ -133,7 +133,7 @@ matrix:
     # oraclejdk10: Not supported anymore: https://changelog.travis-ci.com/stop-a-job-early-if-a-deprecated-jdk-is-configured-76612
     # oraclejdk11: Disabled to keep the build matrix small.
     # oraclejdk12: Disabled to keep the build matrix small.
-    - jdk: oraclejdk13
+    # oraclejdk13: Disabled to keep the build matrix small.
     - jdk: oraclejdk14
     - jdk: oraclejdk15
 
