--- a/build.xml
+++ b/build.xml
@@ -10,9 +10,9 @@
 	<property file="override.properties"/>
 	<!-- Dependencies. These are the most important to configure!                               -->
 	<!--                                                                                        -->
-	<!-- Freenet build01481 compiled with "./gradlew jar copyRuntimeLibs" will copy the         -->
+	<!-- Freenet build01486 compiled with "./gradlew jar copyRuntimeLibs" will copy the         -->
 	<!-- freenet.jar and its dependencies to this directory:                                    -->
-	<property name="freenet.lib.new.location"   location="../fred/build/output/"/>
+	<property name="freenet.lib.new.location"   location="../fred/build/libs/"/>
 	<!-- Older Freenet builds will use these places for the JARs, some of which have to be      -->
 	<!-- downloaded manually:                                                                   -->
 	<property name="freenet.lib.old.location.1" location="../fred/lib/bcprov.jar"/>
