GitHub Actions: Set workflow name

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -3,6 +3,8 @@
 # script. So convert it to the GHA syntax and then remove this FIXME.
 # See: https://docs.github.com/en/actions/guides/building-and-testing-java-with-gradle
 
+name: CI
+
 language: java
 
 # We need Ubuntu 14.04 due to very new JUnit API which WoT needs
