GitHub Actions: Add FIXME for adding cronjob

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -4,6 +4,7 @@
 # See: https://docs.github.com/en/actions/guides/building-and-testing-java-with-gradle
 
 name: CI
+# FIXME: Add cronjob
 on: [push, pull_request]
 
 language: java
