--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -7,8 +7,11 @@ name: CI
 # FIXME: Add cronjob
 on: [push, pull_request]
 
-# We need Ubuntu 14.04 due to very new JUnit API which WoT needs
-dist: trusty
+jobs:
+  build:
+    # FIXME: Use ubuntu-latest once we've finished converting from Travis to GHA syntax
+    runs-on: ubuntu-14.04
+
 # Disabling sudo routes the build to a Docker container instead of a VM
 # which speeds up the build.
 sudo: false
