GitHub Actions: Checkout WoT git repository

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -11,6 +11,8 @@ jobs:
   build:
     # FIXME: Use ubuntu-latest once we've finished converting from Travis to GHA syntax
     runs-on: ubuntu-14.04
+    steps:
+    - uses: actions/checkout@v2
 
 env:
   global:
