GitHub Actions: Checkout fred repository
Documentation for checking out multiple repositories is at:
https://github.com/marketplace/actions/checkout#checkout-multiple-repos-side-by-side

Documentation for the default checkout options:
https://github.com/marketplace/actions/checkout#usage

Things which have intentionally been left out due to those:
- The checkout depth does not have to be specified anymore because it
  defaults to 1 on GHA.
- Only a single branch is checked out by default, also see:
  https://github.com/marketplace/actions/checkout#checkout-v2
- A hard reset is also not needed as it is done by default.
  In fact the way GHA does it is even better because it also does
  $ git clean -ffdx

Based on Freetalk commit 85459b55e40d4bb2dad9f5339812e1e6682331b3.
The other commits on this branch here also have been based on the
similar Freetalk commits at Freetalk's branch github-actions-part1.

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -12,7 +12,16 @@ jobs:
     # FIXME: Use ubuntu-latest once we've finished converting from Travis to GHA syntax
     runs-on: ubuntu-14.04
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout Freenet git repository
+      uses: actions/checkout@v2
+      with:
+        repository: freenet/fred
+        ref: ${{env.FRED}}  # Branch as specified by $FRED environment variable.
+        path: fred
+    - name: Checkout WoT git repository
+      uses: actions/checkout@v2
+      with:
+        path: plugin-WebOfTrust
 
 env:
   global:
@@ -46,21 +55,9 @@ cache:
   - $HOME/.gradle/caches/
   - $HOME/.gradle/wrapper/
 
-# Get/update Freenet Git repository
-install:
-  - cd "$TRAVIS_BUILD_DIR"/..
-  - |
-    if [ ! -e fred/.git ] ; then # Must check subdir, main one will be created by Travis cache config.
-      FRED_UPDATED=1
-      git clone https://github.com/freenet/fred.git --branch "$FRED" --single-branch --depth 1 fred
-    fi
-  - cd fred
-  - git reset --hard # Undo our manual changes to ./gradlew to prevent merge conflicts
-  - git fetch && if [ "$(git rev-parse @)" != "$(git rev-parse @{u})" ] ; then FRED_UPDATED=1 ; git pull ; fi
-  - cd "$TRAVIS_BUILD_DIR"
-
 # Compile Freenet Git repository, start a node
 before_script: |
+  # FIXME: $FRED_UPDATED is not populated by GitHub Actions yet
   if [ "$FRED_UPDATED" = 1 ] ; then
     cd "$TRAVIS_BUILD_DIR"/../fred &&
     # TODO: freenet.jar won't contain class Version if we don't run the
