GitHub Actions: Fix wrong path for WoT git repository checkout
See:
https://github.com/marketplace/actions/checkout#checkout-multiple-repos-side-by-side

Based on Freetalk commit c8cd4e6a3ece41c61bb5e4f4521a23ee8460afce

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Checkout WoT git repository
       uses: actions/checkout@v2
       with:
-        path: plugin-WebOfTrust
+        path: main
 
 env:
   global:
