--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -7,6 +7,10 @@ name: CI
 # FIXME: Add cronjob
 on: [push, pull_request]
 
+env:
+  # NOTICE: A hardcoded copy of this value exists at "matrix:", when updating also change that!
+  FREENET_MINIMUM_JAVA_VERSION: 8
+
 jobs:
   build:
     # FIXME: Use ubuntu-latest once we've finished converting from Travis to GHA syntax
@@ -22,11 +26,6 @@ jobs:
       uses: actions/checkout@v2
       with:
         path: main
-
-env:
-  global:
-    # NOTICE: A hardcoded copy of this value exists at "matrix:", when updating also change that!
-    - FREENET_MINIMUM_JAVA_VERSION=8
 
 addons:
   apt:
