GitHub Actions: Comment-out Travis-specific caching code, will adapt to GHA in a future branch
Based on Freetalk commit c80da542d3adff190c26858234023c73066fd166

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -32,18 +32,20 @@ jobs:
       with:
         path: main
 
-before_cache:
-  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
-  - rm -f  $HOME/.gradle/caches/jars-2/jars-2.lock
-  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
-
-cache:
-  apt: true
-  directories:
-  - $TRAVIS_BUILD_DIR/../fred/
-  - $HOME/.m2
-  - $HOME/.gradle/caches/
-  - $HOME/.gradle/wrapper/
+# FIXME: Convert the below caching code from its Travis CI syntax to the GitHub Actions syntax.
+#
+## before_cache:
+##   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+##   - rm -f  $HOME/.gradle/caches/jars-2/jars-2.lock
+##   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+## 
+## cache:
+##   apt: true
+##   directories:
+##   - $TRAVIS_BUILD_DIR/../fred/
+##   - $HOME/.m2
+##   - $HOME/.gradle/caches/
+##   - $HOME/.gradle/wrapper/
 
 # Compile Freenet Git repository, start a node
 before_script: |
